--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,8 +10,8 @@
     <item
         android:id="@+id/search"
         android:title="@string/search_title"
-        android:icon="@drawable/ic_loved"
-        app:showAsAction="always"
-        app:actionViewClass="android.widget.SearchView"
+        android:icon="@drawable/ic_search"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView"
         />
 </menu>
