--- a/app/src/main/res/layout/fragment_trending.xml
+++ b/app/src/main/res/layout/fragment_trending.xml
@@ -4,11 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TrendingFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <WebView
+        android:id="@+id/webViewTrending"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/trending" />
+        android:layout_height="match_parent"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ProgressBar
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="?android:attr/progressBarStyle"
+            android:visibility="invisible" />
+
+    </RelativeLayout>
+
 
 </FrameLayout>
