--- a/app/src/main/res/menu/bottom_navigation_items.xml
+++ b/app/src/main/res/menu/bottom_navigation_items.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/home"
         android:icon="@drawable/ic_home"
-        android:title="Home"
+        android:title="@string/home"
         />
     <item android:id="@+id/trending"
         android:icon="@drawable/ic_trending"
-        android:title="Trending"/>
+        android:title="@string/trending_string"/>
     <item android:id = "@+id/loved"
-        android:icon="@drawable/ic_love_space"
-        android:title="Most loved" />
+        android:icon="@drawable/ic_categories"
+        android:title="@string/categories" />
 
 
 </menu>
