--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,6 +8,7 @@
         android:title="@string/action_settings"
         app:showAsAction="never" />
     <item
+        android:visible="false"
         android:id="@+id/search"
         android:title="@string/search_title"
         android:icon="@drawable/ic_search"
